samples/_failures_safe/1761695748_0cf087_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4007c4e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b4007c4e.c:169:5: error: expected declaration or statement at end of input
  169 |     int pos = 0;
      |     ^~~
